Add GitHub workflow dotfiles

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
       #     name: Deploy to NPM
       #     command: .circleci/deploy_to_npm.sh
       # - deploy:
-      #     name: Deploy docs to GitHub Pages
+      #     name: Deploy to GitHub Pages
       #     command: .circleci/deploy_to_gh_pages.sh
 
 workflows:
