Update CD workflow

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -70,9 +70,9 @@ jobs:
         uses: actions/download-artifact@v1
         with:
           name: build
-      - name: Deploy to NPM
-        run: .github/workflows/deploy_to_npm.sh
-        env:
-          NPM_AUTH: ${{ secrets.NPM_AUTH }}
-      - name: Deploy to GitHub pages
-        run: .github/workflows/deploy_to_gh_pages.sh
+      # - name: Deploy to NPM
+      #   run: .github/workflows/deploy_to_npm.sh
+      #   env:
+      #     NPM_AUTH: ${{ secrets.NPM_AUTH }}
+      # - name: Deploy to GitHub pages
+      #   run: .github/workflows/deploy_to_gh_pages.sh
