--- a/.circleci/config.puppeteer.yml
+++ b/.circleci/config.puppeteer.yml
@@ -12,10 +12,9 @@ jobs:
       - run:
           name: Install APT packages
           command: |
-            apt-get update
-            apt-get install -y jq zip nasm libgconf-2-4 wget --no-install-recommends
+            apt-get update && apt-get install -y jq zip nasm libgconf-2-4 wget --no-install-recommends
             wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - && sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
-            apt-get install -y google-chrome-unstable fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-kacst ttf-freefont --no-install-recommends
+            apt-get update && apt-get install -y google-chrome-unstable fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-kacst ttf-freefont --no-install-recommends
       - restore_cache:
           keys:
             - v1-node-modules-{{ checksum "package-lock.json" }}
