--- a/.github/workflows/ci.puppeteer.yml
+++ b/.github/workflows/ci.puppeteer.yml
@@ -14,10 +14,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Install APT packages
         run: |
-          apt-get update
-          apt-get install -y jq zip nasm libgconf-2-4 wget --no-install-recommends
+          apt-get update && apt-get install -y jq zip nasm libgconf-2-4 wget --no-install-recommends
           wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - && sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
-          apt-get install -y google-chrome-unstable fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-kacst ttf-freefont --no-install-recommends
+          apt-get update && apt-get install -y google-chrome-unstable fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-kacst ttf-freefont --no-install-recommends
       - name: Cache Node modules
         uses: actions/cache@v1
         with:
@@ -50,10 +49,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Install APT packages
         run: |
-          apt-get update
-          apt-get install -y jq zip nasm libgconf-2-4 wget --no-install-recommends
+          apt-get update && apt-get install -y jq zip nasm libgconf-2-4 wget --no-install-recommends
           wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - && sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
-          apt-get install -y google-chrome-unstable fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-kacst ttf-freefont --no-install-recommends
+          apt-get update && apt-get install -y google-chrome-unstable fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-kacst ttf-freefont --no-install-recommends
       - name: Cache Node modules
         uses: actions/cache@v1
         with:
