--- a/.circleci/config.docker.yml
+++ b/.circleci/config.docker.yml
@@ -14,6 +14,9 @@ jobs:
             - v1-node-modules-{{ checksum "package-lock.json" }}
             - v1-node-modules-
       - run:
+          name: Install APT packages
+          command: apt-get update && apt-get install nasm -y
+      - run:
           name: Install Node modules
           command: npm install
       - save_cache:
@@ -43,10 +46,20 @@ jobs:
           command: npm test
   deploy:
     <<: *defaults
+    environment:
+      - DOCKER_VERSION: 17.03.1-ce
     steps:
       - checkout
       - attach_workspace:
           at: .
+      - run:
+          name: Install Docker
+          command: |
+            set -x
+            curl -L -o /tmp/docker-$DOCKER_VERSION.tgz https://get.docker.com/builds/Linux/x86_64/docker-$DOCKER_VERSION.tgz
+            tar -xz -C /tmp -f /tmp/docker-$DOCKER_VERSION.tgz
+            mv /tmp/docker/* /usr/bin
+      - setup_remote_docker
       # - deploy:
       #     name: Deploy to NPM
       #     command: .circleci/deploy_to_npm.sh
