--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -66,6 +66,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      # - name: Cache Node modules
+      #   uses: actions/cache@v1
+      #   with:
+      #     path: ~/.npm
+      #     key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
+      #     restore-keys: ${{ runner.os }}-node-modules-
+      # - name: Install NPM dependencies
+      #   run: npm install
       - name: Restore build dir
         uses: actions/download-artifact@v1
         with:
