--- a/.github/workflows/cd.puppeteer.yml
+++ b/.github/workflows/cd.puppeteer.yml
@@ -11,6 +11,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     container: node:13.12.0
+    if: "!contains(github.event.head_commit.message, 'SKIP CI')"
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -75,7 +76,7 @@ jobs:
     container: node:13.12.0
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v1
       # - name: Cache Node modules
       #   uses: actions/cache@v1
       #   with:
@@ -84,16 +85,18 @@ jobs:
       #     restore-keys: ${{ runner.os }}-node-modules-
       # - name: Install NPM dependencies
       #   run: npm install
-      - name: Restore build dir
-        uses: actions/download-artifact@v1
-        with:
-          name: build
+      # - name: Restore build dir
+      #   uses: actions/download-artifact@v1
+      #   with:
+      #     name: build
       # - name: Deploy to NPM
       #   run: .github/workflows/deploy_to_npm.sh
       #   env:
       #     NPM_AUTH: ${{ secrets.NPM_AUTH }}
       # - name: Deploy to GitHub pages
       #   run: .github/workflows/deploy_to_gh_pages.sh
+      #   env:
+      #     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       # - name: Deploy to Netlify
       #   run: .github/workflows/deploy_to_netlify.sh
       #   env:
