--- a/.github/workflows/ci.puppeteer.yml
+++ b/.github/workflows/ci.puppeteer.yml
@@ -9,6 +9,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     container: node:13.12.0
+    if: "!contains(github.event.head_commit.message, 'SKIP CI')"
     steps:
       - name: Checkout
         uses: actions/checkout@v2
