--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,8 @@ logs
 *.key
 .credentials
 .credentials.*
+.keystore
+gc_keys.json
 secrets.json
 
 # Databases
@@ -73,7 +75,6 @@ dump.rdb
 
 # Node
 ## NPM
-build/Release
 jspm_packages/
 node_modules/
 ## Optional REPL history
@@ -97,8 +98,8 @@ lib-cov
 
 # Xcode
 ## Build generated
-build/
 DerivedData/
+
 ## Various settings
 *.pbxuser
 !default.pbxuser
@@ -109,6 +110,7 @@ DerivedData/
 *.perspectivev3
 !default.perspectivev3
 xcuserdata/
+
 ## Other
 *.moved-aside
 *.xcuserstate
@@ -116,15 +118,18 @@ xcuserdata/
 *.ipa
 *.dSYM.zip
 *.dSYM
+
 ## CocoaPods
 ## We recommend against adding the Pods directory to your .gitignore. However
 ## you should judge for yourself, the pros and cons are mentioned at:
 ## https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 Pods/
+
 ## Carthage
 ## Add this line if you want to avoid checking in source code from Carthage dependencies.
 Carthage/Checkouts
 Carthage/Build
+
 ## fastlane
 ## It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
 ## screenshots whenever they are needed.
@@ -134,10 +139,21 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
+
 ## Code Injection
 ## After new code Injection tools there's a generated folder /iOSInjectionProject
 ## https://github.com/johnno1962/injectionforxcode
 iOSInjectionProject/
+
+# Android
+*.iml
+.gradle
+.idea/workspace.xml
+.idea/libraries
+.externalNativeBuild
+local.properties
+captures
+app/release
 
 # Terraform
 .terraform
@@ -149,7 +165,6 @@ iOSInjectionProject/
 # Shopify
 config/shopify.yml
 _site
-/.idea
 
 # Sass
 *.sass-cache*
