--- a/github/workflows/cd.puppeteer.yml
+++ b/github/workflows/cd.puppeteer.yml
@@ -10,7 +10,8 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    container: node:13.12.0
+    container: node:14.13.1
+    timeout-minutes: 10
     if: "!contains(github.event.head_commit.message, 'SKIP CI')"
     steps:
       - name: Checkout
@@ -44,7 +45,8 @@ jobs:
     name: Test
     needs: [build]
     runs-on: ubuntu-latest
-    container: node:13.12.0
+    container: node:14.13.1
+    timeout-minutes: 10
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -69,7 +71,8 @@ jobs:
     name: Deploy
     needs: [test]
     runs-on: ubuntu-latest
-    container: node:13.12.0
+    container: node:14.13.1
+    timeout-minutes: 20
     steps:
       - name: Checkout
         uses: actions/checkout@v1
