--- a/github/workflows/ci.yml
+++ b/github/workflows/ci.yml
@@ -8,7 +8,8 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    container: node:13.12.0
+    container: node:14.13.1
+    timeout-minutes: 10
     if: "!contains(github.event.head_commit.message, 'SKIP CI')"
     steps:
       - name: Checkout
@@ -39,7 +40,8 @@ jobs:
     name: Test
     needs: [build]
     runs-on: ubuntu-latest
-    container: node:13.12.0
+    container: node:14.13.1
+    timeout-minutes: 10
     steps:
       - name: Checkout
         uses: actions/checkout@v2
