Update tsconfig files

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,22 +3,26 @@
     "allowJs": false,
     "allowSyntheticDefaultImports": true,
     "declaration": true,
-    "diagnostics": true,
+    "diagnostics": false,
+    "downlevelIteration": true,
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
     "inlineSources": true,
     "lib": ["es6"],
     "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": true,
     "outDir": "./build",
-    "pretty": true,
+    "pretty": false,
     "removeComments": true,
     "resolveJsonModule": true,
+    "skipLibCheck": true,
     "sourceMap": true,
     "sourceRoot": "/",
     "strict": true,
+    "strictNullChecks": true,
     "target": "es6",
     "types": ["node"]
   },
