--- a/tsconfig.react.json
+++ b/tsconfig.react.json
@@ -3,12 +3,11 @@
     "allowJs": false,
     "allowSyntheticDefaultImports": true,
     "baseUrl": "./",
-    "declaration": true,
-    "diagnostics": true,
+    "declaration": false,
+    "diagnostics": false,
     "downlevelIteration": true,
-    "emitDecoratorMetadata": true,
     "esModuleInterop": true,
-    "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
     "inlineSources": true,
     "jsx": "react",
     "lib": ["es6", "dom"],
@@ -16,12 +15,14 @@
     "moduleResolution": "node",
     "noImplicitAny": true,
     "outDir": "./build",
-    "pretty": true,
+    "pretty": false,
     "removeComments": true,
     "resolveJsonModule": true,
+    "skipLibCheck": true,
     "sourceMap": true,
     "sourceRoot": "/",
     "strict": true,
+    "strictNullChecks": true,
     "target": "es5"
   },
   "include": [
