--- a/github/workflows/cd.puppeteer.yml
+++ b/github/workflows/cd.puppeteer.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    container: node:14.13.1
+    container: node:16.3.0
     timeout-minutes: 10
     if: "!contains(github.event.head_commit.message, 'SKIP CI')"
     steps:
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Install APT packages
         run: |
-          apt-get update && apt-get install -yq jq zip gconf-service libasound2 libatk1.0-0 libatk-bridge2.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1  ca-certificates fonts-liberation libappindicator1 libnss3 lsb-release xdg-utils wget
+          apt-get update && apt-get install -yq jq zip gconf-service libasound2 libatk1.0-0 libatk-bridge2.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 ca-certificates fonts-liberation libappindicator1 libnss3 lsb-release xdg-utils wget
       - name: Cache Node modules
         uses: actions/cache@v1
         with:
@@ -45,14 +45,14 @@ jobs:
     name: Test
     needs: [build]
     runs-on: ubuntu-latest
-    container: node:14.13.1
+    container: node:16.3.0
     timeout-minutes: 10
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install APT packages
         run: |
-          apt-get update && apt-get install -yq jq zip gconf-service libasound2 libatk1.0-0 libatk-bridge2.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1  ca-certificates fonts-liberation libappindicator1 libnss3 lsb-release xdg-utils wget
+          apt-get update && apt-get install -yq jq zip gconf-service libasound2 libatk1.0-0 libatk-bridge2.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 ca-certificates fonts-liberation libappindicator1 libnss3 lsb-release xdg-utils wget
       - name: Cache Node modules
         uses: actions/cache@v1
         with:
@@ -67,41 +67,73 @@ jobs:
           name: build
       - name: Test
         run: npm test
-  deploy:
-    name: Deploy
-    needs: [test]
-    runs-on: ubuntu-latest
-    container: node:14.13.1
-    timeout-minutes: 20
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-      # - name: Cache Node modules
-      #   uses: actions/cache@v1
-      #   with:
-      #     path: ~/.npm
-      #     key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
-      #     restore-keys: ${{ runner.os }}-node-modules-
-      # - name: Install NPM dependencies
-      #   run: npm install
-      # - name: Restore build dir
-      #   uses: actions/download-artifact@v1
-      #   with:
-      #     name: build
-      # - name: Deploy to NPM
-      #   run: .github/workflows/deploy_to_npm.sh
-      #   env:
-      #     NPM_AUTH: ${{ secrets.NPM_AUTH }}
-      # - name: Deploy to GitHub pages
-      #   run: .github/workflows/deploy_to_gh_pages.sh
-      #   env:
-      #     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # - name: Deploy to Netlify
-      #   run: .github/workflows/deploy_to_netlify.sh
-      #   env:
-      #     NETLIFY_KEY: ${{ secrets.NETLIFY_KEY }}
-      # - name: Deploy to Heroku
-      #   run: .github/workflows/deploy_to_heroku.sh
-      #   env:
-      #     HEROKU_USER: ${{ secrets.HEROKU_USER }}
-      #     HEROKU_KEY: ${{ secrets.HEROKU_KEY }}
+
+  # Uncomment below to deploy to NPM or GitHub Pages
+  # deploy:
+  #   name: Deploy
+  #   needs: [test]
+  #   runs-on: ubuntu-latest
+  #   container: node:16.3.0
+  #   timeout-minutes: 20
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+  #     - name: Cache Node modules
+  #       uses: actions/cache@v1
+  #       with:
+  #         path: ~/.npm
+  #         key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
+  #         restore-keys: ${{ runner.os }}-node-modules-
+  #     - name: Install NPM dependencies
+  #       run: npm install
+  #     - name: Restore build dir
+  #       uses: actions/download-artifact@v1
+  #       with:
+  #         name: build
+  #     - name: Deploy to NPM
+  #       run: .github/workflows/deploy_to_npm.sh
+  #       env:
+  #         NPM_AUTH: ${{ secrets.NPM_AUTH }}
+  #     - name: Deploy to GitHub pages
+  #       run: .github/workflows/deploy_to_gh_pages.sh
+  #       env:
+  #         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  # Uncomment below to manually deploy to Netlify
+  # deploy:
+  #   name: Deploy
+  #   needs: [test]
+  #   runs-on: ubuntu-latest
+  #   timeout-minutes: 20
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+  #     - name: Install APT packages
+  #       run: apt-get update && apt-get install -yq jq zip
+  #     - name: Restore build dir
+  #       uses: actions/download-artifact@v1
+  #       with:
+  #         name: build
+  #     - name: Deploy to Netlify
+  #       run: .github/workflows/deploy_to_netlify.sh
+  #       env:
+  #         NETLIFY_KEY: ${{ secrets.NETLIFY_KEY }}
+
+  # Uncomment below to deploy to Heroku as a Docker image
+  # deploy:
+  #   name: Deploy
+  #   needs: [test]
+  #   runs-on: ubuntu-latest
+  #   timeout-minutes: 20
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+  #     - name: Restore build dir
+  #       uses: actions/download-artifact@v1
+  #       with:
+  #         name: build
+  #     - name: Deploy to Heroku
+  #       run: .github/workflows/deploy_to_heroku.sh
+  #       env:
+  #         PUBLIC_PATH: ${{ secrets.PUBLIC_PATH }}
+  #         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
