--- a/tsconfig.react.json
+++ b/tsconfig.react.json
@@ -2,11 +2,12 @@
   "compilerOptions": {
     "allowJs": false,
     "allowSyntheticDefaultImports": true,
-    "baseUrl": "./",
     "declaration": false,
     "diagnostics": false,
     "downlevelIteration": true,
+    "emitDecoratorMetadata": true,
     "esModuleInterop": true,
+    "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "inlineSources": true,
     "jsx": "react",
@@ -15,7 +16,7 @@
     "moduleResolution": "node",
     "noImplicitAny": true,
     "outDir": "./build",
-    "pretty": false,
+    "pretty": true,
     "removeComments": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
