--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -16,7 +16,7 @@
     "noImplicitAny": true,
     "outDir": "./build",
     "pretty": true,
-    "removeComments": true,
+    "removeComments": false,
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
