--- a/tsconfig.react.app.json
+++ b/tsconfig.react.app.json
@@ -3,7 +3,7 @@
     "allowJs": false,
     "allowSyntheticDefaultImports": true,
     "declaration": false,
-    "diagnostics": false,
+    "diagnostics": true,
     "downlevelIteration": true,
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
