Update config files

--- a/tsconfig.react.app.json
+++ b/tsconfig.react.app.json
@@ -31,8 +31,8 @@
     "src/**/*.tsx"
   ],
   "exclude": [
-    "**/*.spec.ts",
-    "**/*.spec.tsx",
+    "**/*.test.ts",
+    "**/*.test.tsx",
     "node_modules",
     "build",
     "tests"
