--- a/typescript/react/tsconfig.json
+++ b/typescript/react/tsconfig.json
@@ -3,7 +3,7 @@
     "allowJs": false,
     "allowSyntheticDefaultImports": true,
     "declaration": false,
-    "diagnostics": true,
+    "diagnostics": false,
     "downlevelIteration": true,
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
@@ -31,6 +31,8 @@
     "src/**/*.tsx"
   ],
   "exclude": [
+    "**/*.spec.ts",
+    "**/*.spec.tsx",
     "**/*.test.ts",
     "**/*.test.tsx",
     "node_modules",
