--- a/typescript/react/css-modules/.stylelintrc
+++ b/typescript/react/css-modules/.stylelintrc
@@ -3,6 +3,9 @@
     "stylelint-config-standard",
     "stylelint-config-css-modules"
   ],
+  "plugins": [
+    "stylelint-order"
+  ],
   "rules": {
     "at-rule-empty-line-before": [
       "always",
@@ -32,11 +35,16 @@
     "max-nesting-depth": 3,
     "no-descending-specificity": null,
     "number-leading-zero": "never",
+		"order/properties-order": [
+      ["composes"],
+      { "unspecified": "bottomAlphabetical" }
+    ],
     "property-no-unknown": [
       true,
       {
         "ignoreProperties": [
-          "/^#.*$/"
+          "/^#.*$/",
+          "composes"
         ]
       }
     ],
