--- a/typescript/react/.eslintrc
+++ b/typescript/react/.eslintrc
@@ -228,7 +228,10 @@
     "no-bitwise": "off",
     "no-caller": "error",
     "no-cond-assign": "warn",
-    "no-console": "warn",
+    "no-console": [
+      "warn",
+      { "allow": ["warn", "error"] }
+    ],
     "no-debugger": "error",
     "no-duplicate-case": "error",
     "no-duplicate-imports": "error",
