--- a/typescript/react/styled-components/.babelrc
+++ b/typescript/react/styled-components/.babelrc
@@ -7,12 +7,21 @@
     }
   },
   "presets": [
-    ["@babel/preset-env", { "targets": { "node": "current" } }],
+    [
+      "@babel/preset-env", {
+        "useBuiltIns": "entry",
+        "corejs": 3
+      }
+    ],
     "@babel/preset-typescript",
     "@babel/preset-react"
   ],
   "plugins": [
     "@babel/plugin-transform-runtime",
-    ["babel-plugin-styled-components", { "displayName": false }]
+    [
+      "babel-plugin-styled-components", {
+        "displayName": false
+      }
+    ]
   ]
 }
