--- a/typescript/react/.eslintrc
+++ b/typescript/react/.eslintrc
@@ -9,46 +9,31 @@
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "sourceType": "module",
     "ecmaFeatures": {
       "jsx": true
-    }
+    },
+    "sourceType": "module"
   },
   "root": true,
   "rules": {
-    "@typescript-eslint/adjacent-overload-signatures": "error",
     "@typescript-eslint/array-type": [
       "error",
       {
         "default": "array"
       }
     ],
-    "@typescript-eslint/ban-types": [
+    "@typescript-eslint/class-literal-property-style": [
       "error",
-      {
-        "types": {
-          "Object": {
-            "message": "Avoid using the `Object` type. Did you mean `object`?"
-          },
-          "Function": {
-            "message": "Avoid using the `Function` type. Prefer a specific function type, like `() => void`."
-          },
-          "Boolean": {
-            "message": "Avoid using the `Boolean` type. Did you mean `boolean`?"
-          },
-          "Number": {
-            "message": "Avoid using the `Number` type. Did you mean `number`?"
-          },
-          "String": {
-            "message": "Avoid using the `String` type. Did you mean `string`?"
-          },
-          "Symbol": {
-            "message": "Avoid using the `Symbol` type. Did you mean `symbol`?"
-          }
-        }
-      }
+      "getters"
     ],
+    "@typescript-eslint/comma-dangle": [
+      "error",
+      "always-multiline"
+    ],
+    "@typescript-eslint/consistent-generic-constructors": "error",
+    "@typescript-eslint/consistent-indexed-object-style": "error",
     "@typescript-eslint/consistent-type-assertions": "error",
+    "@typescript-eslint/default-param-last": "error",
     "@typescript-eslint/dot-notation": "off",
     "@typescript-eslint/explicit-member-accessibility": [
       "error",
@@ -57,19 +42,7 @@
       }
     ],
     "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/indent": [
-      "error",
-      2,
-      {
-        "ObjectExpression": "first",
-        "FunctionDeclaration": {
-          "parameters": "first"
-        },
-        "FunctionExpression": {
-          "parameters": "first"
-        }
-      }
-    ],
+    "@typescript-eslint/init-declarations": "error",
     "@typescript-eslint/member-delimiter-style": [
       "error",
       {
@@ -83,30 +56,73 @@
       }
     ],
     "@typescript-eslint/member-ordering": "error",
+    "@typescript-eslint/method-signature-style": "error",
+    "@typescript-eslint/naming-convention": [
+      "error",
+      {
+        "selector": [
+          "variableLike",
+          "property"
+        ],
+        "format": [
+          "camelCase",
+          "PascalCase",
+          "UPPER_CASE"
+        ],
+        "leadingUnderscore": "allowDouble",
+        "trailingUnderscore": "allowDouble"
+      },
+      {
+        "selector": [
+          "memberLike",
+          "method"
+        ],
+        "format": [
+          "camelCase"
+        ]
+      },
+      {
+        "selector": "typeLike",
+        "format": [
+          "PascalCase"
+        ]
+      },
+      {
+        "selector": [
+          "objectLiteralProperty",
+          "objectLiteralMethod"
+        ],
+        "format": null,
+        "modifiers": ["requiresQuotes"]
+      }
+    ],
+    "@typescript-eslint/no-confusing-non-null-assertion": "error",
+    "@typescript-eslint/no-dupe-class-members": "error",
+    "@typescript-eslint/no-duplicate-enum-values": "error",
     "@typescript-eslint/no-empty-function": "off",
-    "@typescript-eslint/no-empty-interface": "off",
     "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-extra-parens": "error",
     "@typescript-eslint/no-misused-new": "error",
+    "@typescript-eslint/no-invalid-this": "error",
+    "@typescript-eslint/no-invalid-void-type": "error",
     "@typescript-eslint/no-namespace": "off",
-    "@typescript-eslint/no-parameter-properties": "off",
-    "@typescript-eslint/no-redeclare": "off",
+    "@typescript-eslint/no-non-null-asserted-nullish-coalescing": "error",
+    "@typescript-eslint/no-require-imports": "error",
+    "@typescript-eslint/no-restricted-imports": "error",
+    "@typescript-eslint/no-shadow": "error",
     "@typescript-eslint/no-this-alias": "error",
-    "@typescript-eslint/no-unused-expressions": "off",
     "@typescript-eslint/no-unused-vars": [
       "warn",
       {
         "args": "none"
       }
     ],
-    "@typescript-eslint/no-use-before-define": "off",
-    "@typescript-eslint/no-var-requires": "off",
-    "@typescript-eslint/object-curly-spacing": [
-      "error",
-      "always"
-    ],
-    "@typescript-eslint/prefer-for-of": "error",
+    "@typescript-eslint/no-use-before-define": "error",
+    "@typescript-eslint/no-useless-constructor": "error",
+    "@typescript-eslint/no-useless-empty-export": "error",
     "@typescript-eslint/prefer-function-type": "error",
-    "@typescript-eslint/prefer-namespace-keyword": "error",
+    "@typescript-eslint/prefer-optional-chain": "error",
+    "@typescript-eslint/prefer-ts-expect-error": "error",
     "@typescript-eslint/quotes": [
       "error",
       "single",
@@ -118,24 +134,13 @@
       "error",
       "never"
     ],
+    "@typescript-eslint/sort-type-union-intersection-members": "error",
     "@typescript-eslint/triple-slash-reference": [
       "error",
       {
         "path": "always",
         "types": "prefer-import",
         "lib": "always"
-      }
-    ],
-    "@typescript-eslint/type-annotation-spacing": [
-      "error",
-      {
-        "before": false,
-        "after": true,
-        "overrides": {
-          "arrow": {
-            "before": true
-          }
-        }
       }
     ],
     "@typescript-eslint/unified-signatures": "error",
@@ -153,10 +158,7 @@
       }
     ],
     "camelcase": "error",
-    "comma-dangle": [
-      "error",
-      "always-multiline"
-    ],
+    "comma-dangle": "off",
     "comma-spacing": [
       "error",
       {
@@ -170,6 +172,8 @@
       "error",
       "multi-line"
     ],
+    "default-param-last": "off",
+    "dot-notation": "off",
     "eol-last": "error",
     "eqeqeq": [
       "error",
@@ -196,6 +200,7 @@
     "import/no-extraneous-dependencies": "off",
     "import/no-internal-modules": "off",
     "indent": "off",
+    "init-declarations": "off",
     "key-spacing": [
       "error",
       {
@@ -230,9 +235,15 @@
     "no-cond-assign": "warn",
     "no-console": [
       "warn",
-      { "allow": ["warn", "error"] }
+      {
+        "allow": [
+          "warn",
+          "error"
+        ]
+      }
     ],
     "no-debugger": "error",
+    "no-dupe-class-members": "off",
     "no-duplicate-case": "error",
     "no-duplicate-imports": "error",
     "no-empty": [
@@ -241,29 +252,31 @@
         "allowEmptyCatch": true
       }
     ],
+    "no-empty-function": "off",
     "no-eval": "error",
     "no-extra-bind": "error",
     "no-fallthrough": "off",
     "no-invalid-this": "off",
     "no-lonely-if": "error",
+    "no-magic-numbers": "off",
     "no-mixed-spaces-and-tabs": "error",
     "no-multi-spaces": "error",
     "no-multiple-empty-lines": [
       "error",
-      { "max": 1, "maxEOF": 0, "maxBOF": 0 }
+      {
+        "max": 1,
+        "maxEOF": 0,
+        "maxBOF": 0
+      }
     ],
     "no-nested-ternary": "off",
     "no-new-func": "error",
     "no-new-wrappers": "error",
     "no-redeclare": "off",
-    "no-return-await": "error",
+    "no-restricted-imports": "off",
+    "no-return-await": "off",
     "no-sequences": "error",
-    "no-shadow": [
-      "off",
-      {
-        "hoist": "all"
-      }
-    ],
+    "no-shadow": "off",
     "no-sparse-arrays": "error",
     "no-template-curly-in-string": "error",
     "no-throw-literal": "off",
@@ -274,6 +287,8 @@
     "no-unsafe-finally": "error",
     "no-unused-labels": "error",
     "no-unused-vars": "off",
+    "no-use-before-define": "off",
+    "no-useless-constructor": "off",
     "no-useless-escape": "warn",
     "no-var": "error",
     "no-void": "error",
