--- a/typescript/node/.eslintrc
+++ b/typescript/node/.eslintrc
@@ -256,7 +256,12 @@
         "allowSingleLine": true
       }
     ],
-    "capitalized-comments": "warn",
+    "capitalized-comments": [
+      "warn",
+      {
+        "ignoreInlineComments": true
+      }
+    ],
     "comma-dangle": "off",
     "comma-spacing": "off",
     "comma-style": [
