--- a/typescript/react/.eslintrc
+++ b/typescript/react/.eslintrc
@@ -202,6 +202,7 @@
       }
     ],
     "@typescript-eslint/space-infix-ops": "error",
+    "@typescript-eslint/switch-exhaustiveness-check": "error",
     "@typescript-eslint/triple-slash-reference": [
       "error",
       {
@@ -261,8 +262,9 @@
     ],
     "capitalized-comments": [
       "warn",
+      "always",
       {
-        "ignoreInlineComments": true
+        "ignoreConsecutiveComments": true
       }
     ],
     "comma-dangle": "off",
