Refactor: Update .eslintrc

--- a/typescript/node/.eslintrc
+++ b/typescript/node/.eslintrc
@@ -97,6 +97,7 @@
         ],
         "format": [
           "camelCase",
+          "snake_case",
           "PascalCase",
           "UPPER_CASE"
         ],
