--- a/typescript/react/.eslintrc
+++ b/typescript/react/.eslintrc
@@ -100,6 +100,7 @@
         ],
         "format": [
           "camelCase",
+          "snake_case",
           "PascalCase",
           "UPPER_CASE"
         ],
