Style: Update .eslintrc

--- a/typescript/react/.eslintrc
+++ b/typescript/react/.eslintrc
@@ -94,6 +94,14 @@
     "@typescript-eslint/naming-convention": [
       "error",
       {
+        "selector" : [
+          "enumMember"
+        ],
+        "format": [
+          "UPPER_CASE"
+        ]
+      },
+      {
         "selector": [
           "variableLike",
           "property"
