--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-# Ignores
-!.keep
-!.gitkeep
-
 # Configuration
 .env
 .env.*
@@ -179,3 +175,8 @@ _site
 
 # Ruby
 .ruby-version
+
+# Ignores
+!.keep
+!.gitkeep
+!*.enc
