--- a/typescript/node/tsconfig.json
+++ b/typescript/node/tsconfig.json
@@ -10,7 +10,7 @@
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "inlineSources": true,
-    "lib": ["es6"],
+    "lib": ["ESNext"],
     "module": "esnext",
     "moduleResolution": "node",
     "noImplicitAny": true,
@@ -23,7 +23,7 @@
     "sourceRoot": "/",
     "strict": true,
     "strictNullChecks": true,
-    "target": "es6"
+    "target": "ESNext"
   },
   "include": [
     "src/**/*.ts"
