--- a/typescript/svelte/.eslintrc
+++ b/typescript/svelte/.eslintrc
@@ -166,6 +166,12 @@
           "objectLiteralProperty",
           "objectLiteralMethod"
         ]
+      },
+      {
+        "format": null,
+        "leadingUnderscore": "allow",
+        "modifiers": ["unused"],
+        "selector": "parameter"
       }
     ],
     "@typescript-eslint/no-confusing-non-null-assertion": "error",
@@ -266,7 +272,7 @@
       "error",
       "consistent"
     ],
-    "arrow-body-style": "error",
+    "arrow-body-style": "off",
     "arrow-parens": [
       "error",
       "as-needed"
@@ -289,13 +295,7 @@
         "allowSingleLine": true
       }
     ],
-    "capitalized-comments": [
-      "warn",
-      "always",
-      {
-        "ignoreConsecutiveComments": true
-      }
-    ],
+    "capitalized-comments": "off",
     "comma-dangle": "off",
     "comma-spacing": "off",
     "comma-style": [
