--- a/typescript/react/css-modules/.stylelintrc
+++ b/typescript/react/css-modules/.stylelintrc
@@ -16,7 +16,7 @@
     "color-hex-alpha": "never",
     "color-named": "never",
     "color-no-invalid-hex": true,
-    "comment-empty-line-before": "always",
+    "comment-empty-line-before": null,
     "comment-no-empty": true,
     "comment-whitespace-inside": "always",
     "custom-property-no-missing-var-function": true,
