--- a/typescript/.vscode/settings.json
+++ b/typescript/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "files.trimFinalNewlines": true,
+  "files.exclude": {
+    ".wrangler/": true,
+  },
   "typescript.format.semicolons": "remove",
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true,
