--- a/typescript/react/.eslintrc
+++ b/typescript/react/.eslintrc
@@ -117,12 +117,12 @@
           "PascalCase",
           "UPPER_CASE"
         ],
-        "leadingUnderscore": "allow",
+        "leadingUnderscore": "allowSingleOrDouble",
         "selector": [
           "variableLike",
           "property"
         ],
-        "trailingUnderscore": "allow"
+        "trailingUnderscore": "allowSingleOrDouble"
       },
       {
         "format": [
