--- a/typescript/react/lib/tsconfig.json
+++ b/typescript/react/lib/tsconfig.json
@@ -3,17 +3,20 @@
     "allowJs": false,
     "allowSyntheticDefaultImports": true,
     "declaration": true,
-    "diagnostics": false,
+    "diagnostics": true,
     "downlevelIteration": true,
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "inlineSources": true,
-    "jsx": "react",
-    "lib": ["ES2017", "DOM"],
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "jsx": "react-jsx",
+    "lib": [
+      "ES2022",
+      "DOM"
+    ],
+    "module": "CommonJS",
+    "moduleResolution": "Node",
     "noImplicitAny": true,
     "outDir": "./lib",
     "pretty": true,
@@ -24,19 +27,16 @@
     "sourceRoot": "/",
     "strict": true,
     "strictNullChecks": true,
-    "target": "ES2017"
+    "target": "ES5"
   },
+  "exclude": [
+    "node_modules",
+    "build",
+    "**/*.spec.ts",
+    "**/*.spec.tsx"
+  ],
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx"
-  ],
-  "exclude": [
-    "**/*.spec.ts",
-    "**/*.spec.tsx",
-    "**/*.test.ts",
-    "**/*.test.tsx",
-    "node_modules",
-    "build",
-    "tests"
   ]
 }
