--- a/typescript/react/css-modules/.stylelintrc
+++ b/typescript/react/css-modules/.stylelintrc
@@ -2,7 +2,6 @@
   "rules": {
     "annotation-no-unknown": true,
     "at-rule-empty-line-before": null,
-    "at-rule-name-newline-after": null,
     "at-rule-no-unknown": [
       true,
       {
@@ -16,7 +15,7 @@
     "color-hex-alpha": "never",
     "color-named": "never",
     "color-no-invalid-hex": true,
-    "comment-empty-line-before": null,
+    "comment-empty-line-before": "always",
     "comment-no-empty": true,
     "comment-whitespace-inside": "always",
     "custom-property-no-missing-var-function": true,
@@ -24,7 +23,6 @@
     "declaration-block-no-duplicate-properties": true,
     "declaration-block-no-shorthand-property-overrides": true,
     "declaration-block-single-line-max-declarations": 2,
-    "declaration-colon-newline-after": null,
     "declaration-empty-line-before": null,
     "font-family-name-quotes": "always-unless-keyword",
     "font-family-no-duplicate-names": true,
