--- a/typescript/react/tsconfig.json
+++ b/typescript/react/tsconfig.json
@@ -10,12 +10,21 @@
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "inlineSources": true,
-    "jsx": "react",
-    "lib": ["ES2017", "DOM", "WebWorker"],
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "jsx": "react-jsx",
+    "lib": [
+      "ES6",
+      "DOM",
+      "WebWorker"
+    ],
+    "module": "CommonJS",
+    "moduleResolution": "Node",
     "noImplicitAny": true,
     "outDir": "./build",
+    "paths": {
+      "@lib/*": [
+        "./lib/*"
+      ]
+    },
     "pretty": true,
     "removeComments": true,
     "resolveJsonModule": true,
@@ -24,17 +33,14 @@
     "sourceRoot": "/",
     "strict": true,
     "strictNullChecks": true,
-    "target": "ES2017"
+    "target": "ES5"
   },
+  "exclude": [
+    "node_modules",
+    "build"
+  ],
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx"
-  ],
-  "exclude": [
-    "**/*.spec.ts",
-    "**/*.spec.tsx",
-    "node_modules",
-    "build",
-    "tests"
   ]
 }
